# sphinx-apitree

./: README.md  pyproject.toml  sphinx-apitree.code-workspace
.github/workflows/: pytest_and_autopublish.yml
apitree/: __init__.py  ast_utils.py  ast_utils_test.py  conf_util.py  context.py  import_utils.py  structs.py  symbol_match.py  tree_extractor.py  writer.py  writer_test.py
apitree/ext/: auto_ref.py  docstring.py  github_link.py
apitree/templates/: api.md  class.md  function.md  module.md
