[project]
name = "sphinx-apitree"
description = "Sphinx extension to auto-generate API tree."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Conchylicultor", email="etiennefg.pot@mail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    # Note: Python and license automatically added by some tools
    "Intended Audience :: Developers",
]
keywords = [
    "sphinx",
    "doc",
]

dependencies = [
]

# This is set automatically by flit using `xxx.__version__`
dynamic = ["version"]

# [project.urls]
# homepage = "https://github.com/conchylicultor/sphinx-apitree"
# repository = "https://github.com/conchylicultor/sphinx-apitree"

[project.optional-dependencies]
# Extensions used by `apitree.make_project`
docs = [
    "sphinx-apitree[ext]",
    "jax[cpu]",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
preview = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]
